--- a/code/SerialPortStream-net45.csproj
+++ b/code/SerialPortStream-net45.csproj
@@ -55,7 +55,10 @@
     </CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>rjcp_serialportstream.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>SerialPortStream.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -120,7 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.SerialPortStream-net45.config" />
-    <None Include="rjcp_serialportstream.snk" />
+    <None Include="SerialPortStream.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
