--- a/code/SerialPortStream-net45.csproj
+++ b/code/SerialPortStream-net45.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NET40;NET45</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET40;NET45;SIGNED_RELEASE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
